finished other films endpoints, update apidoc for them
