# backend/routes/film.route.js
@@ -1,8 +1,10 @@
 import { Router } from "express";
-import { getAllFilms, getFilm, postFilm } from "../controllers/film.controller.js";
+import { deleteFilm, getAllFilms, getFilm, postFilm, putFilm } from "../controllers/film.controller.js";
 
 const filmRoute = Router()
 filmRoute.get('/', getAllFilms)
 filmRoute.get('/:id', getFilm)
 filmRoute.post('/', postFilm)
+filmRoute.put('/:id', putFilm)
+filmRoute.delete('/:id', deleteFilm)
 export default filmRoute;
